# cauchy-haskell

./: README.md  cabal.project  check-bounds.mjs
.github/workflows/: publish.yml
cauchy/: cauchy.cabal
cauchy-backends/: LICENSE  cauchy-backends.cabal
cauchy-backends/src/Data/Cauchy/: Backends.hs
cauchy-backends/test/: Duels.hs  Showcase.hs
cauchy-backends/wasm/: BackendsWidgets.hs
cauchy-groebner/: cauchy-groebner.cabal
cauchy-groebner/src/Data/Cauchy/: Groebner.hs
cauchy-groebner/test/: Showcase.hs  SingularGroebner.hs
cauchy-language/: cauchy-language.cabal
cauchy-language/src/Data/Cauchy/Language/: Poly.hs  Rational.hs
cauchy-language/wasm/: LangExports.hs
cauchy-oracle/: cauchy-oracle.cabal
cauchy-oracle/src/Test/Cauchy/: Oracle.hs
cauchy-oracle/test/: Smoke.hs
cauchy-order/: cauchy-order.cabal
cauchy-order/src/Data/Cauchy/: Order.hs
cauchy-parametricite/: cauchy-parametricite.cabal
cauchy-parametricite/src/Data/Cauchy/Parametricite/: RegExp.hs  Showcase.hs  Widgets.hs
cauchy-parametricite/test/: Duels.hs  Smoke.hs
cauchy-parametricite/wasm/: Exports.hs
cauchy-poly/: cauchy-poly.cabal
cauchy-poly/src/Data/Cauchy/: Poly.hs
cauchy-poly/test/: Duels.hs  MultiShowcase.hs  Showcase.hs
cauchy-poly/wasm/: SeriesWidgets.hs
cauchy/groebner/test/: Duels.hs
cauchy/groebner/wasm/: GroebnerWidgets.hs
cauchy/language/src/Data/Cauchy/Language/: Series.hs  Weighted.hs
cauchy/language/test/: Duels.hs  Showcase.hs
cauchy/language/wasm/: LanguageWidgets.hs
cauchy/oracle/src/Test/Cauchy/: Oracle.hs  Singular.hs
cauchy/oracle/test/: Smoke.hs
cauchy/order/test/: Duels.hs
cauchy/poly/src/Data/Cauchy/: Multi.hs  Poly.hs  Series.hs
cauchy/poly/test/: Duels.hs  MultiDuels.hs  SingularRef.hs
cauchy/poly/wasm/: MultiWidgets.hs
monoid-semiring/: CHANGELOG.md  monoid-semiring.cabal
monoid-semiring/src/Data/: MonoidSemiring.hs
monoid-semiring/test/: Oracle.hs  OrdContract.hs  SemiringClass.hs  Snippets.hs  Tropical.hs
monoid-semiring/test/data/: b000045.txt  b000108.txt
monoid-semiring/wasm/: Exports.hs  WidgetData.hs
