cabal-version:      3.4
name:               cauchy-backends
version:            0.1.0.0
synopsis:           Fast backends: NTT convolution and F4 (phase 5)
description:        The fast-path layer of the cauchy collection. Same answers,
                    faster: a second path to the same value is first a theorem,
                    then a contract. NTT convolution (transform isomorphism,
                    radix-2 recursion, ℤ via CRT under a verified 2-adic bound)
                    and F4 (a Gaussian row operation is a division step). The
                    slow path (the pure package cauchy) is the referee; equality
                    is demanded bit for bit.
license:            BSD-3-Clause
license-file:       LICENSE
author:             nrolland
maintainer:         untruth.51-room@icloud.com
homepage:           https://github.com/nrolland/cauchy-haskell
bug-reports:        https://github.com/nrolland/cauchy-haskell/issues
build-type:         Simple
category:           Math
tested-with:        GHC ==9.12.4

source-repository head
  type:     git
  location: https://github.com/nrolland/cauchy-haskell
  subdir:   cauchy-backends

library
  exposed-modules:  Data.Cauchy.Backends
  hs-source-dirs:   src
  build-depends:    base >=4.14 && <5,
                    -- volets 1–4 fondus dans cauchy (reduce ④, Order/Poly).
                    cauchy,
                    containers,
                    -- ③ : ℤ/ℓ à modulo typé ; invertMod (total) donne ω⁻¹, n⁻¹.
                    mod >=0.2 && <0.3,
                    semirings >=0.7 && <0.8
  default-language: Haskell2010
  ghc-options:      -Wall

test-suite duels
  type:             exitcode-stdio-1.0
  main-is:          Duels.hs
  -- SingularGroebner réutilisé tel quel depuis le volet 4 (désormais sous
  -- cauchy/groebner/test) : le duel décisif rejoué avec F4, zéro ligne neuve.
  other-modules:    SingularGroebner
  hs-source-dirs:   test, ../cauchy/groebner/test
  build-depends:    base,
                    cauchy-backends,
                    cauchy,
                    cauchy:oracle,
                    containers,
                    -- ① ② porteur ℤ/m du harnais : Mod 17 / Mod 15.
                    mod >=0.2 && <0.3,
                    process,
                    QuickCheck >=2.14,
                    semirings
  default-language: Haskell2010
  -- -threaded : le duel décisif de ④ rejoue Singular (FFI) ; le filet
  -- CAUCHY_ORACLE_DUEL_TIMEOUT exige le RTS fileté pour interrompre un
  -- sous-processus pendu.
  ghc-options:      -Wall -threaded
