cabal-version:      3.0
name:               cauchy-parametricite
version:            0.1.0.0
synopsis:           Paramétricité : une étoile, des réalisations (volet 7)
description:
  Vitrine de paramétricité : la loi @star x = 1 + x * star x@ réalisée par
  instance (court-circuit, corécursion gardée, forme close) et composée par
  l'élimination matricielle. Réutilise @Data.Star@ (semirings), @Series@
  (cauchy-poly) et @Matrix@ (cauchy-language) ; n'introduit que le semi-anneau
  des expressions rationnelles, qui n'a pas de propriétaire Hackage léger
  retenu (porte d'écosystème, à instruire au temps rouge).
license:            BSD-3-Clause
author:             nicolas rolland
build-type:         Simple

library
  hs-source-dirs:   src
  exposed-modules:  Data.Cauchy.Parametricite.RegExp
                    Data.Cauchy.Parametricite.Showcase
                    Data.Cauchy.Parametricite.Widgets
  build-depends:    base >=4.14 && <5,
                    semirings >=0.7 && <0.8,
                    cauchy-poly,
                    cauchy-language
  default-language: Haskell2010
  ghc-options:      -Wall

test-suite smoke
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Smoke.hs
  build-depends:    base,
                    semirings,
                    cauchy-parametricite
  default-language: Haskell2010

-- Oracle (temps rouge) — une loi, des réalisations, chacune jugée par un
-- référent algorithmiquement indépendant : sur 'RegExp' (la classe neuve) la
-- loi de l'étoile et le théorème de Kleene (regex-applicative + sémantique à
-- la main + simulation d'automate) ; sur les séries ℚ l'inverse formel
-- 1/(1−p) (Fibonacci/OEIS, récurrence indexée) ; sur le tropical le coût
-- minimal (Bellman, forme close ⌈n/2⌉). Arbitres tranchés à la porte
-- d'écosystème (regex-applicative, déjà moteur de référence du volet 2).
test-suite duels
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Duels.hs
  build-depends:    base,
                    QuickCheck >=2.14,
                    regex-applicative >=0.3 && <0.4,
                    semirings,
                    cauchy-poly,
                    cauchy-language,
                    cauchy-parametricite
  default-language: Haskell2010
  ghc-options:      -Wall
