cabal-version:      2.4
name:               cauchy-poly
version:            0.1.0.0
synopsis:           Univariate polynomials S[x] and lazy power series S[[x]] (phase 1)
description:        The univariate layer of the cauchy family: S[x] as the
                    monoid semiring over (N, +) - the free algebra on one
                    generator - and S[[x]] as its x-adic completion, a lazy
                    coinductive stream of coefficients. The contract is the
                    nine CONTRAT lines of explainer pages 1-3; the duels
                    test-suite realizes them against the poly package, OEIS
                    and published Taylor coefficients.
license:            BSD-3-Clause
author:             nrolland
maintainer:         nrolland
build-type:         Simple
category:           Math
tested-with:        GHC ==9.6.7

source-repository head
  type:     git
  location: https://github.com/nrolland/cauchy-haskell
  subdir:   cauchy-poly

library
  exposed-modules:  Data.Cauchy.Poly,
                    Data.Cauchy.Series
  hs-source-dirs:   src
  build-depends:    base >=4.14 && <5,
                    infinite-list >=0.1 && <0.2,
                    monoid-semiring,
                    semirings >=0.7 && <0.8
  default-language: Haskell2010
  ghc-options:      -Wall

test-suite duels
  type:             exitcode-stdio-1.0
  main-is:          Duels.hs
  other-modules:    Showcase
  hs-source-dirs:   test
  build-depends:    base,
                    cauchy-poly,
                    cauchy-oracle,
                    QuickCheck >=2.14,
                    semirings,
                    poly >=0.5,
                    mod,
                    vector
  default-language: Haskell2010
  ghc-options:      -Wall
