cabal-version:      2.4
name:               monoid-semiring
version:            0.1.0.0
synopsis:           The monoid semiring M ->0 S and its generalized Cauchy product
description:        Finitely supported functions from a monoid M to a semiring S,
                    multiplied by convolution (f*g)(s) = sum over uv=s of f(u).g(v).
                    Polynomials, formal languages, tropical algebra are instances.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Nicolas FP PARIS
maintainer:         untruth.51-room@icloud.com
homepage:           https://github.com/nrolland/cauchy-haskell
bug-reports:        https://github.com/nrolland/cauchy-haskell/issues
build-type:         Simple
category:           Math
tested-with:        GHC ==9.12.4
extra-source-files: test/data/*.txt
extra-doc-files:    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/nrolland/cauchy-haskell
  subdir:   monoid-semiring

library
  exposed-modules:  Data.MonoidSemiring
  hs-source-dirs:   src
  build-depends:    base >=4.14 && <5,
                    containers >=0.6 && <0.9,
                    semirings >=0.7 && <0.8
  default-language: Haskell2010
  ghc-options:      -Wall

test-suite oracle
  type:             exitcode-stdio-1.0
  main-is:          Oracle.hs
  other-modules:    OrdContract,
                    Snippets,
                    SemiringClass,
                    Tropical
  hs-source-dirs:   test
  build-depends:    base >=4.14 && <5,
                    containers >=0.6 && <0.9,
                    QuickCheck >=2.14 && <2.19,
                    semirings >=0.7 && <0.8,
                    monoid-semiring
  default-language: Haskell2010
  ghc-options:      -Wall
